--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/worker-tasks-goes",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Worker tasks for extracting and archiving GOES data.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -23,7 +23,9 @@
     "node": ">=6.11.0"
   },
   "dependencies": {
-    "moment": "^2.18.1"
+    "@dendra-science/utils-moment": "0.0.1",
+    "moment": "^2.18.1",
+    "request": "^2.82.0"
   },
   "devDependencies": {
     "@dendra-science/task-machine": "0.0.2",
@@ -40,8 +42,7 @@
     "feathers": "^2.2.0",
     "feathers-hooks": "^2.0.2",
     "feathers-rest": "^1.8.0",
-    "mocha": "^3.5.0",
-    "request": "^2.81.0"
+    "mocha": "^3.5.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
