--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dendra-science/worker-tasks-goes",
   "version": "0.1.0",
-  "description": "Worker tasks for extracting and archiving GOES data.",
+  "description": "Worker tasks for importing GOES data.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
   "main": "dist/index.js",
