--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/worker-tasks-goes",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Worker tasks for importing GOES data.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -23,27 +23,27 @@
     "node": ">=8.7.0"
   },
   "dependencies": {
-    "@dendra-science/goes-dds-client": "0.1.0",
-    "moment": "^2.21.0",
+    "@dendra-science/goes-dds-client": "^0.1.1",
+    "moment": "^2.22.2",
     "node-nats-streaming": "0.0.28"
   },
   "devDependencies": {
     "@dendra-science/task-machine": "0.1.2",
     "ajv": "^5.5.2",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.1",
-    "eslint": "^4.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "feathers": "^2.2.4",
     "feathers-hooks": "^2.1.2",
     "feathers-rest": "^1.8.1",
-    "mocha": "^5.0.4"
+    "mocha": "^5.2.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
