--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/worker-tasks-goes",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Worker tasks for importing GOES data.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -16,6 +16,7 @@
     "lint": "eslint src",
     "lint-test": "eslint test",
     "test": "npm run lint-test && NODE_ENV=test mocha test --recursive --use_strict",
+    "test-gc": "npm run lint-test && NODE_ENV=test mocha test -gc --recursive --use_strict",
     "test:build": "npm run build && npm run test",
     "test:watch": "chokidar --initial 'src/**/*.js' 'test/**/*.js' -c 'npm run test:build'"
   },
@@ -24,8 +25,8 @@
   },
   "dependencies": {
     "@dendra-science/goes-dds-client": "^0.1.1",
-    "moment": "^2.22.2",
-    "node-nats-streaming": "0.0.28"
+    "moment": "^2.23.0",
+    "node-nats-streaming": "0.0.51"
   },
   "devDependencies": {
     "@dendra-science/task-machine": "0.1.2",
@@ -33,17 +34,18 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.11.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "feathers": "^2.2.4",
     "feathers-hooks": "^2.1.2",
+    "feathers-memory": "^3.0.0",
     "feathers-rest": "^1.8.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.0.5"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
